examples/test/testpolicy11943.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11943
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key39: value6
      key18: value44
      key6: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value8
          key48: value9
      podSelector:
        matchLabels:
          key13: value43
